[package]
name = "rust_dmmsuite_test_harness"
version = "0.1.0"
authors = ["tigercat2000"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_dmmsuite = { git = "https://github.com/tigercat2000/rust_dmmsuite" }
pest = "2.1.3"

[profile.release]
opt-level = 3
lto = 'thin'
codegen-units = 1
incremental = true
debug = true